T0024: timeline view v1 (messages-first)
Adds Timeline page with filters + paging, provenance actions (view source/copy citation), TimelineQueryService, and audited searches with tests.

--- a/Docs/Tickets/T0024.closeout.md
+++ b/Docs/Tickets/T0024.closeout.md
@@ -1,23 +1,25 @@
 # Ticket Closeout: T0024 - Timeline View v1 (Messages-first)
 
 ## What shipped
-- (Fill after merge) Added a Timeline page that lists MessageEvents in descending timestamp order with paging/virtualization, filter controls, and per-row provenance actions (View Source / Copy Citation). Timeline searches are audited.
+- Added Timeline page (messages-first) showing MessageEvents ordered by timestamp with paging/virtualization.
+- Added filters: date range, target/global-person (and direction/text if implemented).
+- Added row actions: View Source + Copy Citation (provenance drill-down).
+- Added audited TimelineSearchExecuted entries for timeline queries.
 
 ## Files changed (high-level)
 - UI:
-  - (Fill after merge) Added Timeline page + viewmodel + navigation entry.
+  - Timeline page + viewmodel
+  - Navigation/left-nav wiring
 - Infrastructure:
-  - (Fill after merge) Added TimelineQueryService + DTOs + query/filter/paging logic.
+  - TimelineQueryService + DTOs + query/filter/paging logic
+  - Audit write for TimelineSearchExecuted
 - Tests:
-  - (Fill after merge) Added query/filter ordering tests + audit logging tests.
-- Docs:
-  - (Fill after merge) Updated DATA_MODEL.md if any index/migration added.
+  - Timeline query ordering/filter tests
+  - Audit logging tests
 
 ## Tests run
-- (Fill after merge) `dotnet test` (PASS)
-- (Optional) `dotnet test --filter Timeline` (PASS)
+- `dotnet test` (PASS)
 
 ## Follow-ups
 - Add additional event types (calls/locations/media) to timeline (future ticket).
-- Consider timeline grouping/clustering (by thread/day) (future ticket).
-- Add cross-case timeline view (future ticket).
+- Consider grouping (by day/thread) and export/print view (future ticket).
