--- a/Docs/Tickets/T0024.md
+++ b/Docs/Tickets/T0024.md
@@ -109,9 +109,9 @@ Log:
 5. Use “View Source” and “Copy citation”; confirm correct provenance.
 
 ## Codex Instructions
-- Follow offline-only constraints (no network calls/telemetry).
-- Preserve provenance and immutability of raw evidence.
-- Keep UI responsive; use paging + cancellation.
-- No silent merges; reuse existing identity resolution logic.
-- Keep build green; add tests; add migrations only if required.
-- End with summary + files changed + steps to verify.
+- Use the new workflow: read **Docs/Tickets/T0024.md** + **Docs/Tickets/T0024.context.md** first.
+- Follow canonical docs via links in the context pack (Invariants/Architecture/Data model/Workflow). Do not paste global rules into the ticket.
+- Open/modify **only** files listed in the context pack whitelist.
+  - If another file is required, update `T0024.context.md` **first**, then continue.
+- Keep implementation offline-only, provenance-first, audited, and performant (paging + cancellation).
+- End with: summary + files changed + manual verification steps.
