--- a/Docs/Tickets/T0024.context.md
+++ b/Docs/Tickets/T0024.context.md
@@ -14,10 +14,11 @@ Add a Messages-first Timeline page that lists MessageEvents in time order with f
 ## Files to open (whitelist)
 - Docs/Tickets/T0024.md
 - Docs/Tickets/T0024.context.md
+- Docs/TICKETS.md
 
 ### New files to create (deterministic; safe to whitelist now)
-- src/CaseGraph.App/Views/TimelinePage.xaml
-- src/CaseGraph.App/Views/TimelinePage.xaml.cs
+- src/CaseGraph.App/Views/Pages/TimelineView.xaml
+- src/CaseGraph.App/Views/Pages/TimelineView.xaml.cs
 - src/CaseGraph.App/ViewModels/TimelineViewModel.cs
 - src/CaseGraph.Infrastructure/Timeline/TimelineQueryService.cs
 - src/CaseGraph.Infrastructure/Timeline/TimelineRowDto.cs
@@ -26,12 +27,28 @@ Add a Messages-first Timeline page that lists MessageEvents in time order with f
 ### Existing files (add ONLY after you identify exact paths in your repo)
 > During implementation, you will need to wire the page into left-nav/navigation and reuse existing provenance + audit helpers.
 > Once you locate the exact files, add them here BEFORE modifying them:
-- src/CaseGraph.App/Views/<YourShellOrMainWindow>.xaml
-- src/CaseGraph.App/ViewModels/<YourShellOrMainViewModel>.cs
-- src/CaseGraph.App/<YourNavOrRoutesFile>.cs
-- src/CaseGraph.Infrastructure/Audit/<YourAuditWriterOrService>.cs
-- src/CaseGraph.Infrastructure/<YourWorkspaceDbFactoryOrQueryService>.cs
-- src/CaseGraph.App/<YourProvenanceOpenSourceHelper>.cs
+- src/CaseGraph.App/MainWindow.xaml
+- src/CaseGraph.App/MainWindow.xaml.cs
+- src/CaseGraph.App/DependencyInjection/ServiceCollectionExtensions.cs
+- src/CaseGraph.App/Models/NavigationItem.cs
+- src/CaseGraph.App/Models/NavigationPage.cs
+- src/CaseGraph.App/Services/INavigationService.cs
+- src/CaseGraph.App/Services/NavigationService.cs
+- src/CaseGraph.App/ViewModels/MainWindowViewModel.cs
+- src/CaseGraph.App/ViewModels/MainWindowViewModel.AssociationGraph.cs
+- src/CaseGraph.App/Views/Pages/SearchView.xaml
+- src/CaseGraph.App/Views/Pages/SearchView.xaml.cs
+- src/CaseGraph.Infrastructure/Persistence/WorkspaceDbContext.cs
+- src/CaseGraph.Infrastructure/Persistence/Entities/MessageEventRecord.cs
+- src/CaseGraph.Infrastructure/Persistence/Entities/MessageParticipantRecord.cs
+- src/CaseGraph.Infrastructure/Persistence/Entities/TargetRecord.cs
+- src/CaseGraph.Infrastructure/Persistence/Entities/GlobalPersonRecord.cs
+- src/CaseGraph.Infrastructure/Persistence/Entities/TargetGlobalPersonLinkRecord.cs
+- src/CaseGraph.Infrastructure/Services/AuditLogService.cs
+- src/CaseGraph.Infrastructure/Services/MessageSearchService.cs
+- src/CaseGraph.Infrastructure/Services/TargetRegistryService.cs
+- tests/CaseGraph.Infrastructure.Tests/AssociationGraphQueryServiceTests.cs
+- tests/CaseGraph.Infrastructure.Tests/MessageIngestAndSearchTests.cs
 
 ## Notes and constraints
 - Offline-only implementation.
@@ -44,3 +61,4 @@ Add a Messages-first Timeline page that lists MessageEvents in time order with f
 - Timeline searches must be audited (preserve audit hash-chain semantics).
 - Reuse existing participant/target/global-person resolution logic used by Search/Where-Seen (do not invent a second resolution path).
 - If you need to touch files outside the whitelist, update this context pack first, then proceed.
+- Before coding and before final output: run `dotnet run --project Tools/TicketKit -- verify T0024 --strict` and keep it passing.
